--- a/custom_components/blnet/manifest.json
+++ b/custom_components/blnet/manifest.json
@@ -6,5 +6,6 @@
     "pyblnet==0.9.1"
   ],
   "dependencies": [],
-  "codeowners": ["@nielstron"]
+  "codeowners": ["@nielstron"],
+  "version": "0.5.0"
 }
