Small fix in manifest

--- a/custom_components/blnet/manifest.json
+++ b/custom_components/blnet/manifest.json
@@ -5,7 +5,7 @@
   "requirements": [
     "pyblnet==0.9.1"
   ],
-  "dependencies": [],
+  "dependencies": {},
   "codeowners": ["@nielstron"],
   "version": "0.5.0"
 }
