--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,7 +23,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip fire
+        python -m pip install --upgrade pip fire homeassistant
         python3 requirements_from_manifest.py custom_components/blnet/manifest.json > requirements.txt
         pip install -r requirements.txt
 
